--- a/longhorn/fleet.yaml
+++ b/longhorn/fleet.yaml
@@ -1,5 +1,13 @@
 
 defaultNamespace: longhorn-system
+
+NamespaceLabels:
+  app.kubernetes.io/managed-by: Helm
+
+NamespaceAnnotations:
+  meta.helm.sh/release-name: longhorn-system
+  meta.helm.sh/release-namespace: longhorn-system
+  
 helm:
   repo: https://charts.rancher.io
   chart: longhorn
